# ATOM

./: fp8_server.sh  pyproject.toml
.github/benchmark/: models.json  oot_benchmark_models.json  oot_models_accuracy.json  sglang_benchmark_models.json  sglang_models_accuracy.json
.github/dashboard/: index.html
.github/scripts/: atom_oot_test.sh
.github/workflows/: atom-sglang-accuracy-validation.yaml  atom-sglang-benchmark.yaml  atom-vllm-accuracy-validation.yaml  atom-vllm-benchmark.yaml  atom-vllm-test.yaml  atomesh-benchmark.yaml  docker-release.yaml  sync.yaml
atom/: config.py
atom/model_engine/: async_proc.py  engine_core.py  model_runner.py
atom/model_loader/: loader.py
atom/model_ops/: attention_mla.py  base_attention.py  moe.py  topK.py
atom/models/: deepseek_mtp.py  deepseek_v2.py  deepseek_v4.py  deepseek_v4_mtp.py  glm4_moe.py  glm4_moe_mtp.py  qwen3_5.py  qwen3_5_mtp.py  qwen3_next.py  qwen3_next_mtp.py
atom/plugin/: __init__.py  config.py  prepare.py  register.py
atom/utils/: __init__.py  envs.py  forward_context.py
docker/: Dockerfile
docs/: DOCUMENTATION_AUDIT_REPORT.html  architecture_guide.html  compilation_cudagraph_guide.html  configuration_guide.html  distributed_guide.html  environment_variables.html  genindex.html  hermes_agent_guide.html  index.html  installation.html  model_ops_guide.html  model_run_guide.html  model_support_guide.html  model_support_guide.md  objects.inv  quickstart.html  scheduling_kv_cache_guide.html  search.html  searchindex.js  serving_benchmarking_guide.html  vllm_plugin_backend_guide.html
(+103 files in other folders)
