[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "atom"
authors = [{ name = "ValarLip" }]
license = "MIT"
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = ["pybind11", "transformers==5.2.0", "zmq", "msgspec", "xxhash", "fastapi>=0.115,<0.137", "psutil", "protobuf", "uvicorn", "uvloop", "aiohttp", "datasets", "openpyxl", "tqdm", "setproctitle"]

[project.urls]
Homepage = "https://github.com/ROCm/ATOM"
Repository = "https://github.com/ROCm/ATOM"
Issues = "https://github.com/ROCm/ATOM/issues"

[tool.setuptools_scm]
write_to = "atom/_version.py"
write_to_template = "__version__ = '{version}'\n"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["atom*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
atom = [
    "mesh/target/release/libmesh.so",
]

[project.entry-points."vllm.platform_plugins"]
# by default the entry-points will be installed anyway
# but the plugin mode for platforms can be disabled by 
# ATOM_DISABLE_VLLM_PLUGIN=1
atom = "atom.plugin.vllm.register:register_platform"

[project.entry-points."vllm.general_plugins"]
atom_model_registry = "atom.plugin.vllm.register:register_model"
